--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,68 @@
-.App {
+*{
+  font-weight: 200;
+}
+body{
+  background-color: oldlace;
+  margin-top: 3rem;
+  margin-left: 1rem;
+  margin-right: 1rem;
+}
+.app-title{
   text-align: center;
+  font-weight: 200;
+  color: #8B4513;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.card-header{
+  background-color: #F5DEB3;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.card{
+  background-color: #FFEFD5;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.btn-primary{
+  color: #fff;
+  background-color: #d08e3a;
+  border-color: #d08e3a;
 }
-
-.App-link {
-  color: #61dafb;
+.btn-primary:hover {
+  color: #fff;
+  background-color: #a95f01;
+  border-color: #a95f01;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.btn-primary:active {
+  color: #fff;
+  background-color: #6d3e01;
+  border-color: #6d3e01;
+}
+/* .btn-primary.focus, .btn-primary:focus {
+  color: #fff;
+  background-color: #6d3e01;
+  border-color: #6d3e01;
+} */
+.btn-primary.focus, .btn-primary:focus {
+  color: #fff;
+  background-color: #6d3e01;
+  border-color: #6d3e01;
+  box-shadow: 0 0 0 0.2rem #d39e00
+}
+.btn-primary:not(:disabled):not(.disabled).active:focus, .btn-primary:not(:disabled):not(.disabled):active:focus, .show>.btn-primary.dropdown-toggle:focus {
+  box-shadow: 0 0 0 0.2rem #d39e00;
+}
+.btn-primary:not(:disabled):not(.disabled).active, .btn-primary:not(:disabled):not(.disabled):active, .show>.btn-primary.dropdown-toggle {
+  color: #fff;
+  background-color: #6d3e01;
+  border-color: #6d3e01;
+}
+.form-control{
+  background-color: #fdf5de;
+}
+.form-control:focus {
+  color: #495057;
+  background-color: #fdf5de;
+  border-color: #d08e3a;
+  outline: 0;
+  box-shadow: 0 0 0 0.2rem #FFEBCD;
+}
+.btn-outline-danger {
+  color: #8B4513;
+  border-color: #8B4513;
 }
