--- a/src/App.css
+++ b/src/App.css
@@ -61,3 +61,21 @@ body{
   color: #8B4513;
   border-color: #8B4513;
 }
+.badgeContainer{
+  position: fixed;
+  bottom: 10px;
+  right: 10px;
+}
+.badgeContainer:hover{
+  opacity: .7;
+}
+.badgeGit{
+  text-transform: uppercase;
+  font-weight: 250;
+  font-size: 10px;
+  letter-spacing: 1px;
+  color: #d08e3a;
+}
+a:hover{
+  text-decoration: none;
+}
